# SAMURAI_ENGINE

./: CMakeLists.txt  README.md
core/coreConfig/: Config.h
core/editor/assetManagerWindow/: assetManagerWindow.cpp  assetManagerWindow.h
core/editor/containersWindow/: containersWindow.cpp  containersWindow.h
core/editor/editShortcuts/: editShortcuts.cpp  editShortcuts.h
core/editor/editor/: editor.cpp  editor.h
core/editor/logWindow/: logWindow.cpp  logWindow.h
core/runtime/: pikaMain.cpp  runtimeContainer.h
core/runtime/containerManager/: containerManager.cpp  containerManager.h
core/runtime/dllLoader/: dllLoader.cpp  dllLoader.h
core/utility/: Sizes.h  fileChanged.cpp  fileChanged.h  staticString.h  staticVector.h
core/utility/assert/: assert.cpp  assert.h
core/utility/openGL/: frameBuffer.cpp  frameBuffer.h
core/utility/stringManipulation/: stringManipulation.cpp  stringManipulation.h
gameplay/: containers.cpp  containers.h
gameplay/containers/: pikaGameplay.h
gameplay/containers/mario/: mario.cpp  mario.h  marioEditor.h
gameplay/dll/: dllMain.cpp  dllMain.h
resources/mario/: map1.scene
shared/: Context.h  baseContainer.h  containerInformation.h
shared/input/: callbacks.cpp  callbacks.h  input.h
shared/memory/: CustomAllocator.cpp  CustomAllocator.h  globalAllocator.cpp  globalAllocator.h  memoryArena.cpp  memoryArena.h
shared/settings/: log.cpp  log.h  shortcutApi.cpp  shortcutApi.h
shared/windowGraphic/: gui.cpp  gui.h  window.cpp  window.h
